code/dotnet/SecurityModeling/v4/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Security Modeling client library for .NET

[![API Version](https://img.shields.io/badge/api-v4.0.1-blue)](https://developer.factset.com/api-catalog/security-modeling-api)
[![Nuget](https://img.shields.io/badge/nuget-v2.0.0-orange)](https://www.nuget.org/packages/FactSet.SDK.SecurityModeling/2.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 4.0.1
- SDK version: 2.0.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.SecurityModeling -v 2.0.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.SecurityModeling -Version 2.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.SecurityModeling.Api;
using FactSet.SDK.SecurityModeling.Client;
using FactSet.SDK.SecurityModeling.Model;

namespace Example
{
    public static class DeleteSecuritiesExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.SecurityModeling.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new SecurityModelingApi(config);
            var sMDeleteParametersRoot = new SMDeleteParametersRoot(); // SMDeleteParametersRoot |  (optional) 

            try
            {
                // Delete existing securities
                RequestStatusRoot result = apiInstance.DeleteSecurities(sMDeleteParametersRoot);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling SecurityModelingApi.DeleteSecurities: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/security-modeling/v4*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*SecurityModelingApi* | [**DeleteSecurities**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SecurityModelingApi.md#deletesecurities) | **POST** /securities/delete | Delete existing securities
*SecurityModelingApi* | [**GetFields**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SecurityModelingApi.md#getfields) | **GET** /securities/{securityType}/fields | Get security type fields
*SecurityModelingApi* | [**GetSecurities**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SecurityModelingApi.md#getsecurities) | **POST** /securities/retrieve | Get existing securities
*SecurityModelingApi* | [**SmGetRequestResultById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SecurityModelingApi.md#smgetrequestresultbyid) | **GET** /securities/{jobId}/result | Get SM upsert or delete result by id
*SecurityModelingApi* | [**SmGetUpsertStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SecurityModelingApi.md#smgetupsertstatusbyid) | **GET** /securities/{jobId}/status | Get SM upsert or delete status by id
*SecurityModelingApi* | [**UpsertSecurities**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SecurityModelingApi.md#upsertsecurities) | **POST** /securities/upsert | Create or update securities


## Documentation for Models

 - [Model.APIClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/APIClientErrorResponse.md)
 - [Model.APIError](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/APIError.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/Error.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/ErrorSource.md)
 - [Model.RequestStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/RequestStatus.md)
 - [Model.RequestStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/RequestStatusRoot.md)
 - [Model.SMCreateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMCreateParameters.md)
 - [Model.SMCreateParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMCreateParametersRoot.md)
 - [Model.SMCreateResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMCreateResponse.md)
 - [Model.SMCreateResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMCreateResponseRoot.md)
 - [Model.SMCreateResponseRootMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMCreateResponseRootMeta.md)
 - [Model.SMDeleteParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMDeleteParameters.md)
 - [Model.SMDeleteParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMDeleteParametersRoot.md)
 - [Model.SMRetrieveParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMRetrieveParameters.md)
 - [Model.SMRetrieveParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMRetrieveParametersRoot.md)
 - [Model.SMRetrieveResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMRetrieveResponse.md)
 - [Model.SMRetrieveResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMRetrieveResponseRoot.md)
 - [Model.SMSecurityResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMSecurityResponse.md)
 - [Model.SMTemplateFieldProperties](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMTemplateFieldProperties.md)
 - [Model.SMTemplateFieldPropertiesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/SecurityModeling/v4/docs/SMTemplateFieldPropertiesRoot.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
